--- a/glavstr.html
+++ b/glavstr.html
@@ -45,12 +45,12 @@
 
 
 	<div class="obuv-info">
-		<img src="img/man1.jpg" alt="" class="img__obuv-info">
+		<img src="img/model.png" alt="" class="img__obuv-info">
 
 		<div class="info">
-			<h1 class="title">Кросовки Nike model: 1234</h1>
+			<h1 class="title">Кроссовки New balanse 990/h1>
 			<h5 class="article">Article: 7346872</h5>
-			<h3 class="price">17.990 KZT</h3>
+			<h3 class="price">32.990 KZT</h3>
 
 			<div class="description">
 				<h3><strong>Описание</strong></h3>
