--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/b358bccbe8.js" crossorigin="anonymous"></script>
 	   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-		<link rel="shortcut icon" href="GamZik.png">
+		<link rel="shortcut icon" href="img/GamZik.png">
 </head>
 <body>
 
@@ -21,6 +21,8 @@
 		<div class="nav-menu">
 			<ul class="menu">
 				<li class="nav-item"><a href="man.html" class="nav-link">Мужчины</a></li>
+				<li class="nav-item"><a href="#" class="nav-link"></a></li>
+				<li class="nav-item"><a href="#" class="nav-link"></a></li>
 				<li class="nav-item"><a href="wooman.html" class="nav-link">Женщины</a></li>
 			</ul>
 		</div>
@@ -96,8 +98,8 @@
 			<h1>The new <strong>990</strong></h1>
 			<p class="tagline">Их носят супермодели в Лондоне и отцы в Огайо</p>
 			<div class="inform-link">
-				<a href="#" class="inform-btn shop">Читать далее</a>
-				<a href="#" class="inform-btn read">Купить сейчас</a>
+				<a href="glavstr.html" class="inform-btn shop">Читать далее</a>
+				<a href="glavstr.html" class="inform-btn read">Купить сейчас</a>
 			</div>
 		</div>
 		<div class="photo-model">
