--- a/man.html
+++ b/man.html
@@ -4,17 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<script src="https://kit.fontawesome.com/b358bccbe8.js" crossorigin="anonymous"></script>
+	<link rel="shortcut icon" href="img/GamZik.png">
+	<title>GamZik. магазин красовок</title>
 </head>
 <body>
 	<div class="navigation">
-		<div class="img/logo">
-			<a href='index.html'><img src="img/GamZik.png" alt="" class="logotype"></a>
+		<div class="logo">
+			<a href='index.html'><img src="img/GamZik.png" alt="" class="logotype1"></a>
 		</div>
 
 		<div class="nav-menu">
 			<ul class="menu">
 				<li class="nav-item"><a href="man.html" class="nav-link">Мужчины</a></li>
+				<li class="nav-item"><a href="#" class="nav-link1"></a></li>
+				<li class="nav-item"><a href="#" class="nav-link1"></a></li>
 				<li class="nav-item"><a href="wooman.html" class="nav-link">Женщины</a></li>
 			</ul>
 		</div>
@@ -29,10 +33,10 @@
 		<div class="personal-item">
 			<div class="auth">
 				<div class="login">
-					<a href="#" class="auth-link signIn"><i class="fas fa-user-circle"></i>Войти</a>
+					<a href="#" class="auth-link1 signIn"><i class="fas fa-user-circle"></i>Войти</a>
 				</div>
 				<div class="car">
-					<a href="#" class="auth-link"><i class="fas fa-shopping-cart"></i>Корзина</a>
+					<a href="#" class="auth-link1"><i class="fas fa-shopping-cart"></i>Корзина</a>
 				</div>
 			</div>
 		</div>
@@ -41,48 +45,100 @@
 
 	<div class="obuv">
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man1.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv.html"> Adidas Originals Ozweego: </a></h4>
+			<h3 class="price link"><a href="obuv.html">44&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man2.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv2.html"> Adidas Originals Superstar: </a></h4>
+			<h3 class="price link"><a href="obuv2.html">28&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man3.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv3.html">Adidas Originals Niteball:</a></h4>
+			<h3 class="price link"><a href="obuv3.html">29&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man4.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv4.html"> Nike Air Max 9090 NRG:</a></h4>
+			<h3 class="price link"><a href="obuv4.html">34&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man5.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv5.html">ASICS Gel-Lyte III OG:</a></h4>
+			<h3 class="price link"><a href="obuv5.html">29&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man6.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv6.html">Nike Air Max 95 PRM: </a></h4>
+			<h3 class="price link"><a href="obuv6.html">39&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man7.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv7.html">PUMA Mirage Mox x: </a></h4>
+			<h3 class="price link"><a href="obuv7.html">34&nbsp;990&nbsp;KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/man8.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuv8.html">ASICS Gel-1090: </a></h4>
+			<h3 class="price link"><a href="obuv8.html">27&nbsp;990&nbsp;KZT</a></h3>
 		</div>
-
 
 	</div>
+	<footer>
+		<div class="footer">
+			<div class="links-ft">
+				<div class="fingertipe">
+					<h3 class="title-ft">Fingertipe</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+
+				<div class="resources">
+					<h3 class="title-ft">Resources</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+
+				<div class="about">
+					<h3 class="title-ft">About</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="about-ft">
+				<div class="adress-ft">
+					<img src="img/bx_bx-map.png" alt="" class="img-ft">
+					<h3 class="title-ft">Adress AHPC</h3>
+				</div>
+				<div class="number-ft">
+					<img src="img/phone-android.png" alt="" class="img-ft">
+					<h3 class="title-ft">7 (702) 998 0333</h3>
+				</div>
+				
+					<ul class="img-link">
+						<li><a href="https://www.facebook.com/groups/104805756701519" class="img-ft social-img"><i class="fab fa-facebook"></i></a></li>
+						<li><a href="#" class="img-ft social-img"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCYQQIRoeXOzRZCEECYjsgLw" class="img-ft social-img"><i class="fab fa-youtube"></i></a></li>
+				<li><a href="https://www.instagram.com/aktobe.polytech/?igshid=1vgr365gb5n20" class="img-ft social-img"><i class="fab fa-instagram"></i></a></li>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
