--- a/wooman.html
+++ b/wooman.html
@@ -4,17 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Document</title>
+	<script src="https://kit.fontawesome.com/b358bccbe8.js" crossorigin="anonymous"></script>
+	<link rel="shortcut icon" href="img/GamZik.png">
+	<title>GamZik. магазин красовок</title>
 </head>
 <body>
 	<div class="navigation">
-		<div class="img/logo">
-			<a href='index.html'><img src="img/GamZik.png" alt="" class="logotype"></a>
+		<div class="logo">
+			<a href='index.html'><img src="img/GamZik.png" alt="" class="logotype1"></a>
 		</div>
 
 		<div class="nav-menu">
 			<ul class="menu">
 				<li class="nav-item"><a href="man.html" class="nav-link">Мужчины</a></li>
+				<li class="nav-item"><a href="wooman.html" class="nav-link"></a></li>
+				<li class="nav-item"><a href="man.html" class="nav-link"></a></li>
 				<li class="nav-item"><a href="wooman.html" class="nav-link">Женщины</a></li>
 			</ul>
 		</div>
@@ -29,10 +33,10 @@
 		<div class="personal-item">
 			<div class="auth">
 				<div class="login">
-					<a href="#" class="auth-link signIn"><i class="fas fa-user-circle"></i>Войти</a>
+					<a href="#" class="auth-link1 signIn"><i class="fas fa-user-circle"></i>Войти</a>
 				</div>
 				<div class="car">
-					<a href="#" class="auth-link"><i class="fas fa-shopping-cart"></i>Корзина</a>
+					<a href="#" class="auth-link1"><i class="fas fa-shopping-cart"></i>Корзина</a>
 				</div>
 			</div>
 		</div>
@@ -41,48 +45,99 @@
 
 	<div class="obuv">
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman1.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl.html">Кросовки Nike model: </a></h4>
+			<h3 class="price link"><a href="obuvgirl.html">45.990 KZT</a></h3>
 		</div>
 
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman2.jfif" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl2.html">Кроссовки Nike WMNS Air Max :</a></h4>
+			<h3 class="price link"><a href="obuvgirl2.html">29.990 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman3.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl3.html">Кросовки Nike WMNS Air Force:</a></h4>
+			<h3 class="price link"><a href="obuvgirl3.html">36.490 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman4.jfif" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl4.html">Кроссовки PUMA Mirage Mox  :</a></h4>
+			<h3 class="price link"><a href="obuvgirl4.html">44.990 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman5.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl5.html">кроссовки ASICS UB1-S Gel:</a></h4>
+			<h3 class="price link"><a href="obuvgirl5.html">35.290 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman6.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl6.html">Кросовки Nike Zoom Double : </a></h4>
+			<h3 class="price link"><a href="obuvgirl6.html">47.990 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman7.jfif" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl7.html">Кроссовки Nike WMN Space :</a></h4>
+			<h3 class="price link"><a href="obuvgirl7.html">31.990 KZT</a></h3>
 		</div>
 		<div class="obuv__item">
-			<img src="img/nike.jpg" alt="">
-			<h4 class="name-obuv link"><a href="obuv.html">Кросовки Nike model: 1234</a></h4>
-			<h3 class="price link"><a href="obuv.html">17.990 KZT</a></h3>
+			<img src="img/woman8.jpg" alt="">
+			<h4 class="name-obuv link"><a href="obuvgirl8.html">Кроссовки Nike WMS Fontanka : </a></h4>
+			<h3 class="price link"><a href="obuvgirl8.html">39.990 KZT</a></h3>
 		</div>
-
-
 	</div>
+	<footer>
+		<div class="footer">
+			<div class="links-ft">
+				<div class="fingertipe">
+					<h3 class="title-ft">Fingertipe</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+
+				<div class="resources">
+					<h3 class="title-ft">Resources</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+
+				<div class="about">
+					<h3 class="title-ft">About</h3>
+					<div class="link-items">
+						<a href="#" class="link-ft">Home</a>
+						<a href="#" class="link-ft">Exaples</a>
+						<a href="#" class="link-ft">Pricing</a>
+						<a href="#" class="link-ft">Updates</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="about-ft">
+				<div class="adress-ft">
+					<img src="img/bx_bx-map.png" alt="" class="img-ft">
+					<h3 class="title-ft">Adress AHPC</h3>
+				</div>
+				<div class="number-ft">
+					<img src="img/phone-android.png" alt="" class="img-ft">
+					<h3 class="title-ft">7 (702) 998 0333</h3>
+				</div>
+				
+					<ul class="img-link">
+						<li><a href="https://www.facebook.com/groups/104805756701519" class="img-ft social-img"><i class="fab fa-facebook"></i></a></li>
+						<li><a href="#" class="img-ft social-img"><i class="fab fa-twitter"></i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCYQQIRoeXOzRZCEECYjsgLw" class="img-ft social-img"><i class="fab fa-youtube"></i></a></li>
+				<li><a href="https://www.instagram.com/aktobe.polytech/?igshid=1vgr365gb5n20" class="img-ft social-img"><i class="fab fa-instagram"></i></a></li>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
