--- a/obuvgirl5.html
+++ b/obuvgirl5.html
@@ -45,7 +45,7 @@
 
 
 	<div class="obuv-info">
-		<img src="img/man1.jpg" alt="" class="img__obuv-info">
+		<img src="img/woman5.jpg" alt="" class="img__obuv-info">
 
 		<div class="info">
 			<h1 class="title">Кросовки Nike model: 1234</h1>
